
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {scalar_t__ s_addr; } ;
struct TYPE_4__ {int sin_port; int sin_family; TYPE_1__ sin_addr; } ;
typedef TYPE_2__ sockaddr_in ;
typedef int sockaddr ;
typedef int sin ;
typedef scalar_t__ SOCKET ;
typedef scalar_t__ DWORD ;


 int AF_INET ;
 scalar_t__ INVALID_SOCKET ;
 scalar_t__ SOCKET_ERROR ;
 int SOCK_STREAM ;
 int closesocket (scalar_t__) ;
 scalar_t__ connect (scalar_t__,int *,int) ;
 int htons (int) ;
 scalar_t__ inet_addr (char*) ;
 int printf (char*) ;
 scalar_t__ resolveIP (char*) ;
 scalar_t__ socket (int ,int ,int ) ;

SOCKET tcpConnect(char *host, int port)
{
    SOCKET sock;

sock = socket(AF_INET, SOCK_STREAM, 0);

if(sock == INVALID_SOCKET)
return sock;

sockaddr_in sin;

DWORD ip = resolveIP(host);
if(ip == 0)
ip = inet_addr(host);

sin.sin_addr.s_addr = ip;
sin.sin_family = AF_INET;
sin.sin_port = htons(port);

    if(connect(sock, (sockaddr *)&sin, sizeof(sin)) == SOCKET_ERROR)
{
printf("Connect failed.n");
closesocket(sock);
return INVALID_SOCKET;
}

return sock;
}
